# auto-replication

./: .gitignore  AGENTS.md  AGENT_PAGE_DESIGN.md  DESIGN.md  README.md  ROADMAP.md  UX_Design.md  WEB_UI_PLAN.md  dispatch-implment-plan  pyproject.toml  session_keeping_machanism
presets/experiment-default/: AGENTS.md
presets/experiment-default/skills/dispatch/: SKILL.md
presets/research-default/: AGENTS.md
presets/research-default/skills/dispatch/: SKILL.md
scripts/: real_dispatch_smoke.py  real_session_smoke.py
src/autorep_gateway/: __init__.py  __main__.py  catalog.py  config.py  db.py  main.py  schemas.py  service.py  task_bootstrap.py
src/autorep_runtime/: __init__.py  agent_store.py  dispatch_cli.py  dispatch_store.py  main.py  session_manager.py
static/: agents.html  agents_panel.html  app.js  index.html  styles.css
tests/: test_agent_management.py  test_dispatch_protocol.py  test_persistent_sessions.py  test_task_bootstrap.py
