[project]
name = "autoreplication"
version = "0.1.0"
description = "Gateway and runtime processes for AutoReplication."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.9.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
autorep-gateway = "autorep_gateway.__main__:main"
autorep-runtime = "autorep_runtime.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
